fix: used raw syntax